--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ body {
     text-align: center;
     height: 600px; 
     color: white;
-    background-image: url('../images/Header-Background.PNG');
+    background-image: url('../images/Header-Background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
